--- a/recipes/pad_see_ew.html
+++ b/recipes/pad_see_ew.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Pad See Ew</h1>
-    <img src="../images/pad_see_ew.jpg">
+    <img src="../images/pad_see_ew.jpg" width="500" height="500">
 
     <p>
         Pad See Ew is a Thai Stir Fried noodle dish that I am cooking for dinner tonight. I hope it turns out well.
@@ -33,6 +33,25 @@
         <li>1 large egg</li>
         <li>4 stems Chinese broccoli </li>
     </ul>
+
+    <h2>Steps</h2>
+    <h3>Prep</h3>
+    <ol>
+        <li>Chinese Broccoli -  trim ends, cut into 7.5cm/3" pieces. Separate leaves from stems. Cut thick stems in half vertically so they're no wider than 0.8cm / 0.3" thick.</li>
+        <li>Noodles - Prepare according to packet directions and drain. Time it so they're cooked just before using -  do not leave cooked rice noodles lying around, they break in the wok.</li>
+        <li>Sauce - Mix ingredients until sugar dissolves.</li>
+    </ol>
+    <h3>Cooking</h3>
+    <ol>
+        <li>Heat oil: Heat 1 tbsp oil in a very large heavy based skillet or wok over high heat.</li>
+        <li>Cook garlic and chicken: Add garlic, cook 15 seconds. Add chicken, cook until it mostly changes from pink to white.</li>
+        <li>Chinese broccoli STEMS: Add Chinese broccoli stems, cook until chicken is almost cooked through.</li>
+        <li>Chinese broccoli LEAVES: Add Chinese broccoli leaves, cook until just wilted.</li>
+        <li>Scramble egg: Push everything to one side, crack egg in and scramble.</li>
+        <li>REMOVE chicken from wok: Remove everything in the wok onto a plate (scrape wok clean).</li>
+        <li>Caramelise noodles: Return wok to stove, heat 2 tbsp oil over high heat until it starts smoking (HOT is key!). Add noodles and Sauce. Toss as few times as possible to disperse Sauce and make edges of noodles caramelise - about 1 to 1 1/2 minutes.</li>
+        <li>Add chicken back in: Quickly add chicken and veg back in, and toss to disperse. Serve immediately!</li>
+    </ol>
     
 </body>
 </html>
