--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Recipes</h1>
     <a href = "./recipes/pad_see_ew.html">Pad See Ew</a>
+    <a href = "./recipes/spring_rolls.html">Spring Rolls</a>
 </body>
 </html>
